# ComfyUI-Darkroom

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt  server_routes.py
data/: bw_stocks.py  color_stocks.py
data/icc_profiles/: README.md
data/spectral_luts/: aerocolor_endura_premier.cube  aerocolor_high_endura_premier.cube  agfa_vista_100_ca_dpii.cube  ektachrome_100d_radiance_iii.cube  ektar_100_endura_premier.cube  fp100c_fujiflex_new.cube  fuji_c200_ca_dpii.cube  fuji_natura_1600_ca_dpii.cube  fuji_pro_160c_ca_maxima.cube  fuji_pro_160s_ca_dpii.cube  manifest.json  (+25 more)
nodes/: __init__.py  aces_tonemap.py  chromatic_aberration.py  clarity_texture_dehaze.py  cmyk_export.py  cmyk_gamut_warning.py  cmyk_softproof.py  cmyk_tac_check.py  color_match.py  color_qualifier.py  color_space_transform.py  color_warper.py  film_stock_bw.py  film_stock_color.py  histogram.py  hsl_selective.py  lens_distortion.py  lens_profile.py  lut_apply.py  lut_bake_extract.py  lut_bake_inject.py  lut_export.py  lut_identity.py  perspective_correct.py  raw_load.py  raw_metadata_split.py  skin_tone_uniformity.py  spectral_film_stock.py  vectorscope.py  vignette.py
tools/: bake_spectral_luts.py  build_fuji_bw_dcps.py  build_fuji_dcps.py  costyle_data.json  costyle_report.txt  diagnose_acr_match.py  extract_acr_curve.py  generate_lut_bake_workflow.py  generate_stocks.py  generated_bw_stocks.py  generated_stocks.py  parse_costyles.py
utils/: cmyk.py  color.py  colormatch.py  colorspace.py  dcp.py  dcp_minimal.py  grain.py  image.py  lut.py  raw_loader.py  scopes.py  torch_ops.py
web/: darkroom_folder_picker.js
workflows/: lut_bake_and_apply.json
