[project]
name = "comfyui-darkroom"
description = "Professional color grading & film emulation suite — 34 nodes, 161 film stocks, 102 lens profiles, LUT export, ACES color management"
version = "1.3.0"
license = { file = "LICENSE" }
dependencies = ["scipy>=1.10.0", "opensimplex>=0.4"]

[project.urls]
Repository = "https://github.com/jeremieLouvaert/ComfyUI-Darkroom"

[tool.comfy]
PublisherId = "akurate"
DisplayName = "ComfyUI Darkroom"
Icon = ""
