[project]
name = "comfyui-darkroom"
description = "Professional color grading & film emulation suite — 46 nodes, 161 film stocks, 35 spectral neg×print LUTs, 102 lens profiles, reference-driven Color Match, Histogram + Vectorscope, full CMYK print workflow, LUT export, ACES, RAW decode with Adobe DCP"
version = "1.5.0"
license = { file = "LICENSE" }
dependencies = ["scipy>=1.10.0", "opensimplex>=0.4"]

[project.urls]
Repository = "https://github.com/jeremieLouvaert/ComfyUI-Darkroom"

[tool.comfy]
PublisherId = "akurate"
DisplayName = "ComfyUI Darkroom"
Icon = ""
